--- a/.github/workflows/deploy-to-ecs.yml
+++ b/.github/workflows/deploy-to-ecs.yml
@@ -2,10 +2,9 @@
 name: Deploy MCP Service to ECS
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches: [main]
+    types: [closed]
 
 env:
   AWS_REGION: us-east-1
@@ -21,6 +20,7 @@ permissions:
 jobs:
   build-and-deploy:
     name: Build and Deploy
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
