Updates to IAM Policies for Bedrock usage. Applied sonnet 3.5 as Bedrock doesn't have support for Sonnet 4. Minor changes to Framework Analyser. Need to update Duration, Call Date

--- a/.env.template
+++ b/.env.template
@@ -15,7 +15,7 @@ MIRO_ACCESS_TOKEN=
 
 # Anthropic API
 ANTHROPIC_API_KEY=
-ANTHROPIC_MODEL=claude-sonnet-4-20250514
+ANTHROPIC_MODEL="us.anthropic.claude-3-5-sonnet-20241022-v2:0"
 
 # GONG API
 GONG_SECRET=
