--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.36.1",
     "express": "^4.21.1",
+    "jsonrepair": "^3.13.0",
     "lucide-react": "^0.460.0",
     "next": "^15.5.2",
     "next-auth": "5.0.0-beta.25",
