Minor changes to env template and updating the bridge with Authentication logic

--- a/.env.template
+++ b/.env.template
@@ -20,3 +20,15 @@ ANTHROPIC_MODEL="us.anthropic.claude-3-5-sonnet-20241022-v2:0"
 # GONG API
 GONG_SECRET=
 GONG_KEY=
+
+# AWS Creds
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION='us-east-1'
+
+
+# NODE ENV
+NODE_ENV=development
+
+#Service Bearer Token
+SERVICE_API_KEY=
