Updated NextJS version due to React RSC vuln

--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "express": "^4.21.1",
     "jsonrepair": "^3.13.0",
     "lucide-react": "^0.460.0",
-    "next": "^15.5.2",
-    "next-auth": "5.0.0-beta.25",
+    "next": "^16.0.8",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.3",
     "postgres": "^3.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.5.4",
